--- a/Pedro/style.css
+++ b/Pedro/style.css
@@ -16,10 +16,13 @@ body{
     margin: 0;
     padding: 0;
 }
+
 .principal{
     background-image: url("img/Background.png") ;
     background-repeat: no-repeat;
     background-size: contain;
+    align-items: center;
+    text-align: center ;
 }
 
 .container{
@@ -57,6 +60,79 @@ body{
     margin: 1em 0 2em 0;
 }
 
-.container__caixa{
+.conteiner__caixa{
     margin: 0 6em;
+}
+
+.secundario__imagem{
+width: 80%;
+}
+
+.secundario{
+    align-items: center;
+    margin: 0 10em;
+}
+
+.descricao__titulo {
+    font-weight: 700;
+    font-size: 48px;
+    color: var(--branco-principal);
+    margin-bottom: 0.3em;
+}
+
+.descricao__texto{
+    color: var(--cinza-secundario);
+}
+
+.secundario__botao{
+ display: inline-block;   
+ margin-top: 1em;
+}
+
+.container__descricao{
+    padding: 2em;
+}
+
+.dispositivos__lista{
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    margin: 5em 0;
+}
+
+.dispositivos{
+    text-align: center;
+}
+
+.dispositivo__titulo{
+    font-size: 48px;
+}
+
+.lista__item{
+    font-size: 32px;
+    color: var(--branco-principal);
+}
+
+.rodape__lista {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin-top: 1em;
+}
+
+.lista__link a{
+    text-decoration: none;
+    color: var(--branco-principal);
+    margin-left: 1em;
+}
+
+.rodape__texto {
+    margin: 1em 0;
+    color: var(--cinza-secundario);
+    font-size: 14px;
+}
+
+.rodape {
+    text-align: center;
+    margin: 5em 3em;
 }
